로그인 구현, JWT 토큰 발행 완료 [MMS]

--- a/askServer/src/main/resources/application.yaml
+++ b/askServer/src/main/resources/application.yaml
@@ -20,3 +20,8 @@ spring:
 logging:
   level:
     org.hibernate.sql: debug
+    org.springframework.security: debug
+
+jwt:
+  token:
+    secret: "secretKey"
